workloads/stats-api/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stats-api
  namespace: default
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.app: glob:master-*
  labels:
    app: stats-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: stats-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: stats-api
    spec:
      containers:
      - name: app
        command:
        - ./app
        - --v=5
        - --logtostderr=true
        - --slack-token=$(SLACK_TOKEN)
        image: cloudnativenordics/stats-api:master-6d74dd7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
