workloads/stats-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stats-api
  name: stats-api
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: stats-api
